--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 
     <div class="box">
-        <span style="--i:1;"><img src="./images/1.jpeg" ></span>
-        <span style="--i:2;"><img src="./images/2.jpeg" ></span>
-        <span style="--i:3;"><img src="./images/3.jpeg" ></span> 
-        <span style="--i:4;"><img src="./images/4.jpeg" ></span>
+        <span style="--i:1;"><img src="./images/1.jpg" ></span>
+        <span style="--i:2;"><img src="./images/2.jpg" ></span>
+        <span style="--i:3;"><img src="./images/3.jpg" ></span> 
+        <span style="--i:4;"><img src="./images/4.jpg" ></span>
         <span style="--i:5;"><img src="./images/5.jpg" ></span> 
         <span style="--i:6;"><img src="./images/6.jpg" ></span>
         <span style="--i:7;"><img src="./images/7.jpg" ></span> 
